Revert "bump -> Java 24 s.t. we can start to use finalised native memory support in the JDK"
This reverts commit 4aa61f686495934e10aad74e63eaaa9128a6b793.